src/test/deca/context/invalid/renduInter/25-wrong-type-sub-int-bool.deca
{
    int x = 4;
    boolean y = true;
    x = x-y;
}